DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Projected_Total_Hours_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Projected_Total_Hours_Billable__c</fullName>
    <formula>amc__Hours_Completed__c + amc__Projected_Hours_Remaining_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the total projected billable hours for this Action. Hours Completed – Billable + Projected Hours Remaining – Billable</inlineHelpText>
    <label>Projected Total Hours – Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>