DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Receive_New_Action_Notification__c.field-meta.xml
<CustomField>
    <fullName>amc__Receive_New_Action_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Mission Control - system level only</description>
    <label>Receive New Action Notification</label>
    <type>Checkbox</type>
</CustomField>