DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Recognised_Revenue__c.field-meta.xml
<CustomField>
    <fullName>amc__Recognised_Revenue__c</fullName>
    <formula>IF(ISPICKVAL(amc__Milestone__r.amc__Project__r.amc__Billing_Type__c, &quot;Fixed Price&quot;), amc__Completion_Percent__c * amc__Hours_Scheduled_Cost__c, amc__Hours_Completed_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the recognised revenue based on Completion % or Hours Completed (Billable). If Billing Type = Fixed Price, Completion % * Hours Scheduled Value (Billable), otherwise Hours Completed Value (Billable)</inlineHelpText>
    <label>Recognised Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>