DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Requirement__c.field-meta.xml
<CustomField>
    <fullName>amc__Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Requirement</description>
    <label>Requirement</label>
    <referenceTo>amc__Requirement__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>