DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Scheduled_Hours_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>amc__Scheduled_Hours_Breakdown__c</fullName>
    <inlineHelpText>Stores the JSON of the breakdown of scheduled hours for the Action Owner and Contributors for this Action</inlineHelpText>
    <label>Scheduled Hours Breakdown</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>