DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Skill__c.field-meta.xml
<CustomField>
    <fullName>amc__Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the Skill record for the Skill the Role will be using when delivering this Action</description>
    <inlineHelpText>Links to the Skill record for the Skill the Role will be using when delivering this Action</inlineHelpText>
    <label>Skill</label>
    <referenceTo>amc__Skill__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>