DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__Skill_Name__c</fullName>
    <description>Name of the related skill record, used to save on queries in apex triggers.</description>
    <formula>amc__Skill__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill Name</label>
    <type>Text</type>
</CustomField>