DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Status__c.field-meta.xml
<CustomField>
    <fullName>amc__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Planning</fullName>
                <isActive>false</isActive>
                <label>Planning</label>
            </value>
            <value>
                <fullName>Plannned</fullName>
                <isActive>false</isActive>
                <label>Plannned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>