DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__System_End__c.field-meta.xml
<CustomField>
    <fullName>amc__System_End__c</fullName>
    <description>Stores the end date as set by the user before trigger code runs.  Used for calculating recurring actions.</description>
    <label>System End</label>
    <type>Date</type>
</CustomField>