DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__System_Start__c.field-meta.xml
<CustomField>
    <fullName>amc__System_Start__c</fullName>
    <description>Stores the start date as set by the user before trigger code runs.  Used for calculating recurring actions.</description>
    <label>System Start</label>
    <type>Date</type>
</CustomField>