DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Task__c.field-meta.xml
<CustomField>
    <fullName>amc__Task__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box to create a standard Task based on this Action (Note: Can only be used where the Action Owner&apos;s  Project Role record is linked to a User)</inlineHelpText>
    <label>Task</label>
    <type>Checkbox</type>
</CustomField>