DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Total_Hours_Allocated__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Hours_Allocated__c</fullName>
    <formula>amc__Hours_Allocated_Billable__c + amc__Hours_Allocated_Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Calculates Hours Allocated - Billable + Hours Allocated - Non Billable</inlineHelpText>
    <label>Total Hours Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>