DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Total_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Hours_Remaining__c</fullName>
    <formula>amc__Hours_Remaining__c + amc__Hours_Remaining_Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field: Sum of the total hours remaining, billable and non billable</inlineHelpText>
    <label>Total Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>