DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Total_User_Story_Efforts__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_User_Story_Efforts__c</fullName>
    <description>Sum of total Effort of all related User stories</description>
    <label>Total User Story Efforts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>