DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__User_Story__c.field-meta.xml
<CustomField>
    <fullName>amc__User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the User Story record that this Action was created from</inlineHelpText>
    <label>User Story</label>
    <referenceTo>amc__User_Story__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>