DigicielFull/force-app/main/default/objects/amc__Action__c/fields/amc__Working_Days__c.field-meta.xml
<CustomField>
    <fullName>amc__Working_Days__c</fullName>
    <inlineHelpText>Tracks the number of automatically calculated working days for this Action.</inlineHelpText>
    <label>Working Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>