DigicielFull/force-app/main/default/objects/amc__Action__c/validationRules/amc__Event_Creation_Based_On_Action_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Event_Creation_Based_On_Action_Duration</fullName>
    <active>true</active>
    <description>You can only create an Event if the duration of the Action is 14 days or less.</description>
    <errorConditionFormula>AND(amc__Action_Duration__c &gt; 14, OR( AND(ISCHANGED(amc__Event__c), amc__Event__c == true), AND( ISNEW(), amc__Event__c == true)))</errorConditionFormula>
    <errorDisplayField>amc__Event__c</errorDisplayField>
    <errorMessage>An Event cannot be created due to your Action Duration being greater than 14 days.</errorMessage>
</ValidationRule>