DigicielFull/force-app/main/default/objects/amc__Action__c/validationRules/amc__Recurring_Validation_Frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Recurring_Validation_Frequency</fullName>
    <active>true</active>
    <errorConditionFormula>AND(amc__Is_Recurring__c, ISBLANK(TEXT(amc__Recurring_Frequency__c)))</errorConditionFormula>
    <errorDisplayField>amc__Recurring_Frequency__c</errorDisplayField>
    <errorMessage>You must set the Recurring Frequency</errorMessage>
</ValidationRule>