DigicielFull/force-app/main/default/objects/amc__Action__c/validationRules/amc__Related_Task_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Related_Task_Validation</fullName>
    <active>false</active>
    <description>The related task must have an end date, less or equal to the start date of the  child task</description>
    <errorConditionFormula>amc__Dependant_Action__r.amc__End_Date__c &gt;= amc__Start_Date__c</errorConditionFormula>
    <errorDisplayField>amc__Start_Date__c</errorDisplayField>
    <errorMessage>The dependant action has an end date greater than the start date of the current action.  Please adjust your dates accordingly.</errorMessage>
</ValidationRule>