DigicielFull/force-app/main/default/objects/amc__Action__c/listViews/amc__All.listView-meta.xml
<ListView>
    <fullName>amc__All</fullName>
    <columns>NAME</columns>
    <columns>amc__Action_Name__c</columns>
    <columns>amc__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>